[workspace]
members = [
    "liburing-sys",
]

[profile.release]
strip = true
lto = "thin"

[package]
name = "debt-ring"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
liburing-sys = {path = "./liburing-sys" }
bindgen = "0.71.1"
pkg-config = "0.3.32"
cc = { version = "1.2.20", features = ["parallel"] }

[dependencies]
liburing-sys.workspace = true
