[workspace]
members = [
    "liburing-sys",
]

[profile.release]
strip = true
lto = "thin"

[package]
name = "debt-ring"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
liburing-sys = {path = "./liburing-sys" }
bindgen = "0.71.1"
pkg-config = "0.3.32"
cc = { version = "1.2.20", features = ["parallel"] }
nix = { version = "0.29.0", features = ["net", "socket"] }
futures = "0.3.31"
pin-project = "1.1.10"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
liburing-sys.workspace = true
nix.workspace = true
futures.workspace = true
pin-project.workspace = true
